# AI_agents_workshops

./: .env.example  .gitignore  README.md  pyproject.toml
practice_day1/: README.md  agent.py  chat.py  config.py  prompts.py  solution_agent.py  solution_tools.py  tools.py
practice_day2/: README.md  agent.py  chat.py  config.py  prompts.py  rag.py  solution_agent.py  solution_rag.py
practice_day2/hardening/: hardening_injections.py  hardening_langsmith.py  option_a_guardrail.py  option_b_cost.py  option_c_hitl.py
practice_day2/knowledge_base/: code_review_checklist.md  python_standards.md  testing_guidelines.md
practice_day3/: README.md  config.py  graph.py  report.py  run.py  solution_graph.py  state.py
practice_day3/agents/: code_analyzer.py  coordinator.py  solution_coordinator.py  solution_test_generator.py  standards_agent.py  test_generator.py
practice_day3/debugging/: scenario_a_missing_node.py  scenario_b_encoding_error.py  scenario_c_circular_loop.py
practice_day3/lib/: json_utils.py  prompts.py
sample_repo/: README.md  app.py  legacy_app.py  models.py  utils.py
sample_repo/tests/: test_app.py
